# app/controllers/users_controller.py
@@ -1,5 +1,6 @@
 import connexion
 import six
+from bson.objectid import ObjectId
 
 from app.models.request_user import RequestUser  # noqa: E501
 from app.models.user import User  # noqa: E501
@@ -16,10 +17,15 @@ def add_user(body):  # noqa: E501
 
     :rtype: User
     """
-    if connexion.request.is_json:
-        body = RequestUser.from_dict(connexion.request.get_json())  # noqa: E501
-    print()
-    return 'do some magic!'
+    req = RequestUser.from_dict(body).to_dict()  # noqa: E501
+    req["email_canonical"] = req["email"].lower()
+    req["username_canonical"] = req["username"].lower()
+
+    print(req)
+    user_id = db['User'].insert_one(req).inserted_id
+    req["id"] = str(user_id)
+    del req["_id"]
+    return req
 
 
 def get_user(user_id):  # noqa: E501
@@ -32,4 +38,10 @@ def get_user(user_id):  # noqa: E501
 
     :rtype: User
     """
-    return 'do some magic!'
+    user = db['User'].find_one({"_id":ObjectId(user_id)})
+    if user is None:
+        return 'Not found', 404
+    ret = User.from_dict(user).to_dict()
+    ret["id"] = str(user["_id"])
+    ret["self_url"] = "/users/{}".format(ret['id'])
+    return ret
